--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18"
   }
