--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ services:
   mongodb:
     image: mongo
     restart: unless-stopped
-    env_file: ./.env
     ports:
-      - 8080:27017
+      - ${DB_PORT}:27017
     volumes:
       - db:/data/db
   app:
@@ -13,12 +12,11 @@ services:
       - mongodb
     build: .
     restart: unless-stopped
-    env_file: ./.env
     ports:
-      - 3000:3000
+      - ${RUNNING_PORT}:3000
     environment:
       - DB_HOST=mongodb
-      - DB_NAME=db_mentorly
-      - DB_PORT=27017
+      - DB_NAME=${DB_NAME}
+      - DB_PORT=${DB_PORT}
 volumes:
   db:
